# pydeps

./: .bumpversion.cfg  .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-hooks.yaml  .pydeps  .readthedocs.yml  .scrutinizer.yml  .travis.yml  CHANGELOG.md  LICENSE  README.html  README.md  README.rst  atlassian-ide-plugin.xml  codecov.yml  depgraph.py  depgraph2dot.py  dkbuild.ini  dkbuild.yml  foo.txt  importfinder.py  py2depgraph.py  pyproject.toml  pytest.ini  requirements.txt  runtests.py  setup.py  tasks.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.eggs/: README.txt
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci-cd.yml  codeql-analysis.yml  docker-agent.yml  docker-devcontainer.yml  unit-tests.yml
docker-images/agent/: Dockerfile
docker-images/devcontainer/: Dockerfile
docs/: Makefile  conf.py  index.rst  make.bat  modules.rst  pydeps.rst  requirements.txt
pydeps/: __init__.py  __main__.py  arguments.py  cli.py  clilog.py  colors.py  configs.py  depgraph.py  depgraph2dot.py  dot.py  dummymodule.py  mf27.py  mfimp.py  package_names.py  prune.py  py2depgraph.py  pycompat.py  pydeps.py  pystdlib.py  render_context.py  target.py  tmp.html
pydeps/mf/: mf_310.py  mf_35.py  mf_36.py  mf_37.py  mf_38.py  mf_next.py  mf_pydeps_orig.py
pydeps/tools/: pydeps2requirements.py
tests/: callab.py  filemaker.py  simpledeps.py  test_cli.py  test_clilog.py  test_cluster.py  test_colors.py  test_config.py  test_cycles.py  test_dep2dot.py  test_dirtree.py  test_dot.py  test_excluder.py  test_externals.py  test_file.py  test_funny_names.py  test_json.py  test_kosaraju.py  test_namespace_packages.py  test_package_names.py  test_py2dep.py  test_pyw.py  test_relative_imports.py  test_render_context.py  test_skinny_package.py  test_skip.py
tests/ab/: abrootmodule.py  b.py
tests/ab/a/: a.py  amodule.py
tests/ab/c/: c.py  cmodule.py
tests/pydeps_cycles/cycles/: b.py  d.py  k.py
tests/relativeimp/: a.py
