[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pydeps"
version = "1.11.0"
authors = [{name = "bjorn", email = "bp@datakortet.no"}]
license = {text = "BSD"}
description = "Display module dependencies"
keywords = ["Python", "Module", "Dependency", "graphs"]
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {Homepage = "https://github.com/thebjorn/pydeps"}
dependencies = [
    'enum34; python_version < "3.4"',
    "stdlib_list",
]

[project.scripts]
pydeps = "pydeps.pydeps:pydeps"

[tool.setuptools]
packages = ["pydeps"]
include-package-data = false

[tool.dkbuild]
    [tool.dkbuild.package]
    name = "pydeps"
    description = "Display module dependencies"
    version = "1.11.0"
    created = "2014"

    [tool.dkbuild.build]
    venv = "pydeps"

    [tool.dkbuild.requirements]
    update = "manual"


[tool.pytest.ini_options]
filterwarnings = "ignore:the imp module is deprecated.*:DeprecationWarning"

[tool.coverage]
    [tool.coverage.run]
    # measure branch coverage
    branch = true
    # parallell = true


    [tool.coverage.report]
    # Regexes for lines to exclude from consideration
    exclude_lines = [
        # Have to re-enable the standard pragma
        "pragma: no cover",
        "pragma: nocover",

        # Don't complain about missing debug-only code:
        "def __repr__",
        "if self\\.debug",

        # ;; Don't complain if tests don't hit defensive assertion code:
        "raise AssertionError",
        "raise NotImplementedError",

        # ;; Don't complain if non-runnable code isn't run:
        "if 0:",
        "if __name__ == .__main__.:",
    ]

    omit = [
        "setup.py",
        "tasks.py",
        "tests/conftest.py",
        "pydeps/mf/*.py",
    ]

    ignore_errors = true

    [tool.coverage.html]
    # html report
    title = "pydeps coverage"